fix spacing and font size

--- a/css/style.css
+++ b/css/style.css
@@ -21,12 +21,12 @@ a:link:hover{color:rgb(44, 170, 226);
 text-decoration: none;}
 
 a.white{color:#fff;
-   font-size: 14pt;
+   font-size: 13pt;
 border-bottom: 1px solid #fff;
     }
 a.black{color:#000;
         border-bottom: 1px solid #fff;
-       font-size: 14pt;
+       font-size: 13pt;
        border-bottom: 1px solid #000;
 }
 
