--- a/css/style2.css
+++ b/css/style2.css
@@ -27,7 +27,7 @@ text-decoration: none;}
 a.blue:link{color:rgb(0, 119, 192);
     text-decoration: none;
         border-bottom: 1px solid #0077C0;
-       font-size: 14pt;
+       font-size: 13pt;
        font-family: 'Roboto', sans-serif;
     }
 
